--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,7 +1,7 @@
 ######################## default configuration ####################
 baseURL = "https://demo.gethugothemes.com/liva/examplesite/"
-languageCode = "en-us"
-title = "Liva | Personal blog template"
+languageCode = "fr-fr"
+title = "Les frérots à vélo"
 theme = "liva-hugo"
 summaryLength = "10"
 paginate = 6
@@ -45,12 +45,12 @@ URL = "plugins/search/search.js"
 
 # main menu
 [[menu.main]]
-name = "About"
+name = "A propos"
 URL = "about/"
 weight = 1
 
 [[menu.main]]
-name = "Post"
+name = "Blog"
 URL = "blog/"
 weight = 2
 
@@ -61,12 +61,12 @@ weight = 3
 
 # footer menu
 [[menu.footer]]
-name = "About"
+name = "A propos"
 URL = "about/"
 weight = 1
 
 [[menu.footer]]
-name = "Post"
+name = "Blog"
 URL = "blog/"
 weight = 2
 
@@ -86,9 +86,9 @@ author = "Themefisher"
 # Google Analitycs
 googleAnalitycsID = "Your ID"
 # Contact Information
-mobile = "0124857985320"
-email = "demo@email.com"
-location = "Dhaka, Bangladedsh"
+mobile = "..."
+email = "lesfrerotsavelo@gmail.com"
+location = "Marseille, France"
 # copyright
 copyright = "| copyright &copy; 2021 [Themefisher](https://themefisher.com/hugo-themes/) All Rights Reserved |"
 
@@ -103,7 +103,7 @@ enable = true
 
 ############################ news letter ########################
 [params.newsletter]
-enable = true
+enable = false
 title = "Join Our Newsletter"
 content = "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero"
 
@@ -116,26 +116,11 @@ expire_days = 2
 
 ############################# social site ########################
 [[params.social]]
-title = "facebook"
-icon = "ti-facebook" # themify icon : https://themify.me/themify-icons
-link = "#"
-
-[[params.social]]
-title = "twitter"
-icon = "ti-twitter-alt" # themify icon : https://themify.me/themify-icons
-link = "#"
-
-[[params.social]]
 title = "instagram"
 icon = "ti-instagram" # themify icon : https://themify.me/themify-icons
-link = "#"
+link = "https://instagram.com/lesfrerotsavelo"
 
 [[params.social]]
 title = "github"
 icon = "ti-github" # themify icon : https://themify.me/themify-icons
-link = "#"
-
-[[params.social]]
-title = "linkedin"
-icon = "ti-linkedin" # themify icon : https://themify.me/themify-icons
-link = "#"
+link = "https://github.com/lesfrerotsavelo/"
