--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -57,9 +57,14 @@ URL = "blog/"
 weight = 2
 
 [[menu.main]]
+name = "Equipement"
+URL = "gear/"
+weight = 3
+
+[[menu.main]]
 name = "Contact"
 URL = "contact/"
-weight = 3
+weight = 4
 
 # footer menu
 [[menu.footer]]
