poste patte de derailleur

--- a/exampleSite/data/gallery.yml
+++ b/exampleSite/data/gallery.yml
@@ -2,3 +2,4 @@ enable : true
 gallery:
   - image : "images/gallery/etude-posturale.jpg"
   - image : "images/gallery/impermeabilisation.jpg"
+  - image : "images/gallery/patte_de_derailleur.png"
