add equipement to footer

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -78,9 +78,14 @@ URL = "blog/"
 weight = 2
 
 [[menu.footer]]
+name = "Equipement"
+URL = "gear/"
+weight = 3
+
+[[menu.footer]]
 name = "Contact"
 URL = "contact/"
-weight = 3
+weight = 4
 
 
 #################### default parameters ################################
