--- a/exampleSite/data/gallery.yml
+++ b/exampleSite/data/gallery.yml
@@ -3,3 +3,4 @@ gallery:
   - image : "images/gallery/etude-posturale.jpg"
   - image : "images/gallery/impermeabilisation.jpg"
   - image : "images/gallery/patte_de_derailleur.png"
+  - image : "images/gallery/velos_sausset.png"
