--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -96,7 +96,7 @@ home = "Home"
 description = "This is meta description"
 author = "Les frérots à vélo"
 # Google Analitycs
-googleAnalitycsID = "Your ID"
+googleAnalitycsID = "G-8WNVSZRHF7"
 # Contact Information
 #mobile = "..."
 email = "lesfrerotsavelo@gmail.com"
